--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,32 @@
 {
-  "name": "inovanti/rsa-validator",
-  "description": "Package for validation and decryption using RSA public keys",
+  "name": "inovanti-bank/rsa-validator",
+  "description": "Package for validation and decryption using RSA public keys (Private Key and Public Key)",
   "type": "library",
   "require": {
     "php": "^8.0",
-    "laravel/framework": "^9.0",
-    "illuminate/database": "*",
-    "vlucas/phpdotenv": "^5.6"
+    "illuminate/support": "^11.0"
   },
   "autoload": {
     "psr-4": {
-      "Inovanti\\RSAValidator\\": "src/"
+      "InovantiBank\\RSAValidator\\": "src/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Inovanti\\RSAValidator\\Providers\\RSAValidatorServiceProvider"
+        "InovantiBank\\RSAValidator\\Providers\\RSAValidatorServiceProvider"
       ],
       "aliases": {
-        "RSAValidator": "Inovanti\\RSAValidator\\Facades\\RSAValidator"
+        "RSAValidator": "InovantiBank\\RSAValidator\\Facades\\RSAValidator"
       }
     }
   },
-  "require-dev": {
-    "phpunit/phpunit": "^9.0"
-  }
+  "minimum-stability": "dev",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Your Name",
+      "email": "dev@inovanti.com.br"
+    }
+  ]
 }
