--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
       "InovantiBank\\RSAValidator\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
   "extra": {
     "laravel": {
       "providers": [
@@ -21,12 +26,20 @@
       }
     }
   },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
+  },
   "minimum-stability": "dev",
   "license": "MIT",
   "authors": [
     {
-      "name": "Your Name",
+      "name": "inovanti Ip",
       "email": "dev@inovanti.com.br"
     }
-  ]
+  ],
+  "require-dev": {
+    "laravel/framework": "^11.0",
+    "phpunit/phpunit": "11.5.x-dev",
+    "mockery/mockery": "2.0.x-dev"
+  }
 }
