--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   "scripts": {
     "test": "vendor/bin/phpunit"
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
     {
